--- a/devices-and-apps_promotions_en.pro.json
+++ b/devices-and-apps_promotions_en.pro.json
@@ -39,7 +39,7 @@
         {
             "title": "Level up your business with Disruptive Technologies",
             "titleColor": "#ffee68",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
+            "imageUrl": "https://dashboard.conradconnect.de/img/providers/disruptivetechnologies/disruptive_technologies_promo.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_dev%26apps_v2.jpg",  
             "content": "Use smart, wireless mini-sensors for digital transformation",
             "contentColor": "#ffffff",
