--- a/project_promotions_en.pro.json
+++ b/project_promotions_en.pro.json
@@ -26,6 +26,15 @@
             "content": "Get notified automatically by smart lights to open your window when the air quality in the room drops.",
             "contentColor": "#45434e",
             "link": "https://dashboard.conradconnect.de/projects/public/59ce4a7b23ded67578391b38"
+        },
+         {
+            "title": "Office heating done right",
+            "titleColor": "#45434e",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_mobile_promoarea.png",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_projets_2.jpg",  
+            "content": "Use this smart heating project to optimize the temperatures in your office.",
+            "contentColor": "#45434e",
+            "link": "https://dashboard.conradconnect.de/projects/public/59d4d3fba3bd1c7cb7eb5f6d"
         }
     ]
 }
