--- a/devices-and-apps_promotions_en.pro.json
+++ b/devices-and-apps_promotions_en.pro.json
@@ -13,7 +13,7 @@
             "title": "Level up your business with Disruptive Technologies",
             "titleColor": "#F89631",
             "imageUrl": "https://dashboard.conradconnect.de/img/providers/disruptivetechnologies/disruptive_technologies_promo.png",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_dev%26apps_v2.jpg",  
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_dev%26apps.jpg",  
             "content": "Use smart, wireless mini-sensors for digital transformation",
             "contentColor": "#ffffff",
             "link": "https://dashboard.conradconnect.de/devices/disruptivetechnologies"
