--- a/devices-and-apps_promotions_de.pro.json
+++ b/devices-and-apps_promotions_de.pro.json
@@ -13,7 +13,7 @@
             "title": "Geschäft mit Disruptive Technologies verbessern",
             "titleColor": "#F89631",
             "imageUrl": "https://dashboard.conradconnect.de/img/providers/disruptivetechnologies/disruptive_technologies_promo.png",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_dev%26apps_v2.jpg",  
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_dev%26apps.jpg",  
             "content": "Verwenden Sie intelligente, drahtlose Minisensoren für die digitale Transformation",
             "contentColor": "#ffffff",
             "link": "https://dashboard.conradconnect.de/devices/disruptivetechnologies"
