--- a/project_promotions_en.pro.json
+++ b/project_promotions_en.pro.json
@@ -30,7 +30,7 @@
          {
             "title": "Office heating done right",
             "titleColor": "#45434e",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/Mobile_Smart%20office.png",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/Mobile_Smart%20office%20(1).png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_projets_2.jpg",  
             "content": "Use this smart heating project to optimize the temperatures in your office.",
             "contentColor": "#45434e",
