--- a/project_promotions_en.pro.json
+++ b/project_promotions_en.pro.json
@@ -10,13 +10,13 @@
             "link": "https://dashboard.conradconnect.de/projects/public/59d4d3fba3bd1c7cb7eb5f6d"
         },
         {
-            "title": "Office heating done right",
+            "title": "Intelligent Heating for Holiday Houses",
             "titleColor": "#45434e",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/Mobile_Smart%20office%20(1).png",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_projets_2.jpg",  
-            "content": "Use this smart heating project to optimize the temperatures in your office.",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/Mobile_holiday%20house.png",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-bannerProjects-4.jpg",  
+            "content": "Reduce your heating costs: Make use of smart control for your holiday apartments or houses and activate the heating automatically when they are booked.",
             "contentColor": "#45434e",
-            "link": "https://dashboard.conradconnect.de/projects/public/59d4d3fba3bd1c7cb7eb5f6d"
+            "link": "https://dashboard.conradconnect.de/projects/public/5dc1442ba085f170e5b7a4ab"
         }
     ]
 }
