--- a/project_promotions_de.pro.json
+++ b/project_promotions_de.pro.json
@@ -10,13 +10,13 @@
             "link": "https://dashboard.conradconnect.de/projects/public/59d4d3fba3bd1c7cb7eb5f6d"
         },
         {
-            "title": "Büro richtig heizen",
+            "title": "Intelligent Heizen in Ferienwohnungen",
             "titleColor": "#45434e",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/Mobile_Smart%20office%20(1).png",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-banner_projets_2.jpg",  
-            "content": "Integrieren Sie dieses intelligente Heizungsprojekt, um die Temperatur in Ihrem Büro zu optimieren.",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/Mobile_holiday%20house.png",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC%20Pro/CCPro_category-bannerProjects-4.jpg",  
+            "content": "Reduzieren Sie Ihre Heizungskosten: Nutzen Sie smarte Steuerung für Ihre Ferienwohnungen oder Häuser und aktivieren Sie die Heizung bei Belegung automatisch.",
             "contentColor": "#45434e",
-            "link": "https://dashboard.conradconnect.de/projects/public/59d4d3fba3bd1c7cb7eb5f6d"
+            "link": "https://dashboard.conradconnect.de/projects/public/5dc1442ba085f170e5b7a4ab"
         }
     ]
 }
