--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -1,5 +1,16 @@
 {
     "projectPromotions": [
+        
+        {
+            "title": "Das eigene Heim bereit für Ihre Abwesenheit",
+            "titleColor": "#1A4276",
+            "imageUrl": "",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/categoriy-Banner_projects.jpg",  
+            "content": "Bereiten Sie Ihr Zuhause auf Ihre Abwesenheit vor und steuern Sie mit einem Knopfdruck Alarmsysteme, Beleuchtung und sogar das Türschloss.",
+            "contentColor": "#1A4276",
+            "link": "https://dashboard.conradconnect.de/public/projects/5b87ff171a81767568807c23"
+        },
+        
          {
             "title": "Mehr Motivation beim Training",
             "titleColor": "#feb7ae",
