--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -4,7 +4,7 @@
         {
             "title": "Das eigene Heim bereit für Ihre Abwesenheit",
             "titleColor": "#1A4276",
-            "imageUrl": "",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/security.png ",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/categoriy-Banner_projects.jpg",  
             "content": "Bereiten Sie Ihr Zuhause auf Ihre Abwesenheit vor und steuern Sie mit einem Knopfdruck Alarmsysteme, Beleuchtung und sogar das Türschloss.",
             "contentColor": "#1A4276",
