--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -4,7 +4,7 @@
         {
             "title": "Get your home ready for your absence",
             "titleColor": "#1A4276",
-            "imageUrl": "",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/security.png ",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/categoriy-Banner_projects.jpg",  
             "content": "Prepare your home for your absence with the touch of a smart button. Security systems, lights, and even the door lock can be controlled with just one click.",
             "contentColor": "#1A4276",
