--- a/devices-and-apps_promotions_de.json
+++ b/devices-and-apps_promotions_de.json
@@ -4,7 +4,7 @@
      {
             "title": "Mit Ring zu mehr Sicherheit im eigenen Zuhause",
             "titleColor": "#FFFFFF",
-            "imageUrl": "",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/dev%26apps-Ring-mobile-2.png",
             "heroImageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/category-banner_dev%26apps.jpg",  
             "content": "Schützen Sie Ihr Zuhause und nutzen Sie smarte Sicherheitsprojekte mit Videotürklingeln, Kameras und Alarmsystemen von Ring.",
             "contentColor": "#FFFFFF",
