--- a/devices-and-apps_promotions_en.json
+++ b/devices-and-apps_promotions_en.json
@@ -4,7 +4,7 @@
     {
             "title": "Home security at your fingertips with Ring",
             "titleColor": "#FFFFFF",
-            "imageUrl": "",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/dev%26apps-Ring-mobile-2.png",
             "heroImageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/category-banner_dev%26apps.jpg",  
             "content": "Protect your home and leverage smart security projects with video doorbells, security cameras, and alarm systems from Ring.",
             "contentColor": "#FFFFFF",
