--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -30,13 +30,13 @@
             "link": "https://dashboard.conradconnect.de/projects/public/5c8a4d16327e2ecbdde3c22b"
         },
         {
-            "title": "Einfach gesünder leben",
+            "title": "Halloween-Projekte für die richtige Gruselstimmung",
             "titleColor": "#45434e",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_mobile_promoarea.png",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_promoarea.jpg",  
-            "content": "Lassen Sie sich automatisch von smarten Lampen benachrichtigen, um Ihr Fenster zu öffnen, wenn die Luftqualität im Raum sinkt.",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC_platfform_projects/Projects_halloween_mobile.png",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC_platfform_projects/projects_halloween.png",  
+            "content": "Mit den passenden Halloween-Projekten von Conrad Connect machen Sie Ihr Gruselfest perfekt.",
             "contentColor": "#45434e",
-            "link": "https://dashboard.conradconnect.de/projects/public/59ce4a7b23ded67578391b38"
+            "link": "https://dashboard.conradconnect.de/projects/public?search_term=halloween"
         }
     ]
 }
