--- a/devices-and-apps_promotions_de.json
+++ b/devices-and-apps_promotions_de.json
@@ -1,6 +1,15 @@
 {
   "devicesAndAppsPromotions": [
-    
+ 
+         {
+            "title": "7 geniale Geräte fürs smarte Homeoffice",
+            "titleColor": "#e8b8ff",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/air%20quaity.png",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/platform_sections-banner.png",  
+            "content": "Mit smarten Geräten und Conrad Connect kriegen Sie Ihr Homeoffice erledigt, den Familienalltag gebändigt und das Facility Management aus der Ferne geregelt.",
+            "contentColor": "#FFFFFF",
+            "link": "https://conradconnect.com/de/blog/7-geniale-geraete-fuers-smarte-homeoffice"
+        },    
      {
             "title": "Mit Ring zu mehr Sicherheit im eigenen Zuhause",
             "titleColor": "#FFFFFF",
@@ -9,16 +18,6 @@
             "content": "Schützen Sie Ihr Zuhause und nutzen Sie smarte Sicherheitsprojekte mit Videotürklingeln, Kameras und Alarmsystemen von Ring.",
             "contentColor": "#FFFFFF",
             "link": "https://dashboard.conradconnect.de/devices/ring"
-         },
-    
-          {
-            "title": "Mit Tuya mühelos das Smart Home gestalten",
-            "titleColor": "#FFFFFF",
-            "imageUrl": "https://dashboard.conradconnect.de/img/providers/tuya/product.png",
-            "heroImageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/shutterstock_1264041919%20_RESIZED.jpg",  
-            "content": "",
-            "contentColor": "#FFFFFF",
-            "link": "https://dashboard.conradconnect.de/devices/tuya"
          },
          {
             "title": "Licht für jede Stimmung mit Nanoleaf",
