--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -2,13 +2,13 @@
     "projectPromotions": [
 
         {
-            "title": "Halloween-Projekte für die richtige Gruselstimmung",
-            "titleColor": "#45434e",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC_platfform_projects/Projects_halloween_mobile.png",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/CC_platfform_projects/projects_halloween.png",  
-            "content": "Mit den passenden Halloween-Projekten von Conrad Connect machen Sie Ihr Gruselfest perfekt.",
-            "contentColor": "#45434e",
-            "link": "https://dashboard.conradconnect.de/projects/public?search_term=halloween"
+            "title": "Romantische Überraschung für den Valentinstag (...aber es funktioniert auch an jedem anderen Tag!)",
+            "titleColor": "#ffffff",
+            "imageUrl": "https://storage.cloud.google.com/conrad-connect-static-content/marketing/project-promotions/CC_promo-banner_valentine-mobile.png",
+            "heroImageUrl" : "https://storage.cloud.google.com/conrad-connect-static-content/marketing/project-promotions/CC_promo-banner_valentines.png",  
+            "content": "Sie wissen nicht, wie man einen Moment besonders macht? Kein Grund zur Sorge. Mit Conrad Connect haben Sie einen Partner. Automatisieren Sie Ihre Musik, Beleuchtung und Steckdosen, um Ihre/n Liebste/n zu überraschen.",
+            "contentColor": "#ffffff",
+            "link": "https://dashboard.conradconnect.de/projects/public/5c5c09c6fbd597e4e496756f"
         },
             {
             "title": "Das eigene Heim bereit für Ihre Abwesenheit",
