--- a/devices-and-apps_promotions_de.json
+++ b/devices-and-apps_promotions_de.json
@@ -2,7 +2,7 @@
   "devicesAndAppsPromotions": [
  
     {
-            "title": "Audi ist jetzt mit an Bord.!",
+            "title": "Audi ist jetzt mit an Bord!",
             "titleColor": "#ffffff",
             "imageUrl": "https://storage.cloud.google.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/audi-mobile.png",
             "heroImageUrl" : "https://storage.cloud.google.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/CC_Promo_banner_audi.png",  
