--- a/devices-and-apps_promotions_de.json
+++ b/devices-and-apps_promotions_de.json
@@ -3,7 +3,7 @@
  
     {
             "title": "Audi ist jetzt mit an Bord!",
-            "titleColor": "#ffffff",
+            "titleColor": "#fda503",
             "imageUrl": "https://storage.cloud.google.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/audi-mobile.png",
             "heroImageUrl" : "https://storage.cloud.google.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/CC_Promo_banner_audi.png",  
             "content": "Besitzer von Elektrofahrzeugen profitieren jetzt von einer Vielzahl von Funktionen, wenn Sie Ihr E-Auto-Modell mit Conrad Connect verknüpfen: Batteriestatus und -kapazität, Reichweite und Verbrauch sowie Festlegen persönlicher Ladestationen",
